[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/Mobs/Blueprint/TamedMobInterface.gd" type="Script" id=2]
[ext_resource path="res://global_theme.tres" type="Theme" id=4]

[node name="TamedMobInterface" type="Control"]
margin_right = 500.0
margin_bottom = 282.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="Panel" parent="."]
margin_left = 64.0
margin_top = 41.0
margin_right = 420.0
margin_bottom = 232.0

[node name="Title" type="Label" parent="."]
margin_left = 219.0
margin_top = 50.0
margin_right = 256.0
margin_bottom = 83.0
grow_horizontal = 2
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FollowButton" type="Button" parent="."]
margin_left = 79.0
margin_top = 101.0
margin_right = 169.0
margin_bottom = 138.0
text = "Follow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StanceButton" type="Button" parent="."]
margin_left = 78.0
margin_top = 141.0
margin_right = 169.0
margin_bottom = 178.0
text = "Neutral"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeNameButton" type="Button" parent="."]
margin_left = 267.0
margin_top = 181.0
margin_right = 405.0
margin_bottom = 218.0
text = "Change Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnclaimButton" type="Button" parent="."]
margin_left = 320.0
margin_top = 141.0
margin_right = 405.0
margin_bottom = 178.0
text = "Unclaim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatingButton" type="Button" parent="."]
margin_left = 78.0
margin_top = 181.0
margin_right = 169.0
margin_bottom = 218.0
text = "Mating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameChange" type="Panel" parent="."]
visible = false
margin_left = 133.0
margin_top = 67.0
margin_right = 357.0
margin_bottom = 206.0

[node name="LineEdit" type="LineEdit" parent="NameChange"]
margin_left = 45.0
margin_top = 40.0
margin_right = 189.0
margin_bottom = 83.0
caret_blink = true

[node name="Label" type="Label" parent="NameChange"]
margin_left = 33.0
margin_top = 4.0
margin_right = 194.0
margin_bottom = 37.0
text = "Enter a new name"

[node name="DoneButton" type="Button" parent="NameChange"]
margin_left = 77.0
margin_top = 91.0
margin_right = 150.0
margin_bottom = 128.0
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobPicture" type="TextureRect" parent="."]
margin_left = 177.0
margin_top = 82.0
margin_right = 305.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_TamedMobInterface_gui_input"]
[connection signal="pressed" from="FollowButton" to="." method="_on_FollowButton_pressed"]
[connection signal="pressed" from="StanceButton" to="." method="_on_StanceButton_pressed"]
[connection signal="pressed" from="ChangeNameButton" to="." method="_on_ChangeNameButton_pressed"]
[connection signal="text_entered" from="NameChange/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="NameChange/DoneButton" to="." method="_on_DoneButton_pressed"]
